--- a/codesamples/overlap/index.html
+++ b/codesamples/overlap/index.html
@@ -82,7 +82,12 @@
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code determines how many cells in a grid are covered by a specific number of overlapping rectangles with a sweep line algorithm to avoid processing every cell individually. In given test cases the grid can be as large as 10^9*10^9, and contain up to 10^5 rectangles. The output is a map indicating how many cells are covered by exactly 𝐶 rectangles, modulo 7001.</p>
+<p>This code determines how many cells in a grid are covered by a specific number of overlapping rectangles with a sweep line algorithm to avoid processing every cell individually. In given test cases the grid can be as large as 10^9*10^9, and contain up to 10^5 rectangles. The output is a map indicating how many cells are covered by exactly 𝐶 rectangles (modulo 7001 to prevent overflow).</p>
+
+
+<h2>Showcase Purpose:</h2>
+<p>This code demonstrates efficient and scalable use of STL data structures in solving a computational geometry problem. It highlights my ability to combine algorithmic design with STL containers for optimal performance and clean, maintainable code.</p>
+<p>By focusing on efficiency, this example showcases my skills in leveraging STL to write high quality, performant C++ code.</p>
 
 
 <h2>Details:</h2>
@@ -101,14 +106,14 @@
 <p>Processing Events:</p>
 <div><ul><li>For a start event, the overlap count for all x-coordinates in the range [<code>x₁, x₂</code>] is incremented.</li>
 <li>For an end event, the overlap count for the same range is decremented.</li>
-<li>After adjusting overlap counts, the hash map is updated to reflect the new distribution of overlap counts.</li></ul></div> 
+<li>After adjusting overlap counts, the map is updated to reflect the new distribution of overlap counts.</li></ul></div> 
 <p>Calculating Area Contributions:</p>
 <div class="insetDeep"><p>Between events, the algorithm calculates the total area contributed by each overlap count. This is done by multiplying the number of x-coordinates with a specific overlap count by the vertical distance (difference in y-coordinates) between consecutive events. These contributions are added to the final result map, with all calculations performed modulo 7001 to prevent overflow.</p></div> 
 <p>Efficiency:</p>
 <div class="insetDeep"><p>The algorithm processes only the edges of rectangles (start and end events) and updates overlap counts directly, making it efficient even for large inputs.</p></div> 
 </div>
 <h3>Output:</h3>
-<div class="inset"><p>The final output is a map where the keys are overlap counts, and the values indicate the total area covered by those counts, modulo 7001. (e.g., 500 cells with 0 overlaps, 230 cells with 1 overlaps, ect.) This approach ensures the solution is scalable and avoids unnecessary computations.</p></div>
+<div class="inset"><p>The final output is a map where the keys are overlap counts, and the values indicate the total area covered by those counts, modulo 7001. (e.g., 500 cells with 0 overlaps, 230 cells with 1 overlap, ect.) This approach ensures the solution is scalable and avoids unnecessary computations.</p></div>
       </div>
     </div>
 
