Finished last code snippet

--- a/codesamples/index.html
+++ b/codesamples/index.html
@@ -4,5 +4,5 @@
 
 <script>
   //Redirect to the projects page
-  window.location.href = "/codesamples/overlap/";
+  window.location.href = "/codesamples/opengl-computeshader";
 </script>
