--- a/codesamples/overlap/index.html
+++ b/codesamples/overlap/index.html
@@ -57,14 +57,19 @@
 
     <!-- ~~~~~~~~~~~Tabs~~~~~~~~~~ -->
     <div class = "tabrow">
+      <button class = "tabinactive" onclick = "window.location.href = '/codesamples/opengl-computeshader'">
+        <div class = "codeTitle">
+          <h1>OpenGL Compute Shaders</h1>
+        </div>
+      </button>
       <button class="tab" onclick = "location.reload()">
         <div class = "codeTitle">
           <h1>Overlapping Rectangles</h1>
         </div>
       </button>
-      <button class = "tabinactive" onclick = "window.location.href = '/codesamples/opengl-computeshader'">
+      <button class="tabinactive" onclick = "window.location.href = '/codesamples/vulkan-computepipeline'">
         <div class = "codeTitle">
-          <h1>OpenGL Compute Shaders</h1>
+          <h1>Vulkan Compute Pipeline</h1>
         </div>
       </button>
       <button class = "tabinactive" onclick = "window.location.href = '/codesamples/bst-map'">
