--- a/codesamples/vulkan-computepipeline/index.html
+++ b/codesamples/vulkan-computepipeline/index.html
@@ -86,26 +86,26 @@
         <!-- Code snippet will get autoloaded here :D -->
       </div>
       <div class = "codeDescription">
-<h2>Overview</h2>
+<h2>Overview:</h2>
 <p>This code provides a abstraction for managing compute pipelines with the Vulkan API. It integrates functionality for setting up compute shader modules, creating the pipeline/pipeline layouts, and binding the resources for use. Enabling easy interaction with Vulkan's low-level pipeline architecture for developers.</p>
 
 
-<h2>Showcase Purpose</h2>
-<p>This code snippet demonstrates my ability to work with the Vulkan API, focusing on compute pipelines and it's shaders. By creating an abstraction layer for Vulkan's compute pipeline, tasks like shader module creation, pipeline layout configuration, and pipeline creation are streamlined.</p>
+<h2>Showcase Purpose:</h2>
+<p>This code sample demonstrates my ability to work with the Vulkan API, focusing on compute pipelines and it's shaders. By creating an abstraction layer for Vulkan's compute pipeline, tasks like shader module creation, pipeline layout configuration, and pipeline creation are streamlined.</p>
 
 
-<h2>Details</h2>
-<p>1. Shader Creation:</p>
+<h2>Details:</h2>
+<p>Shader Creation:</p>
 <div class="inset">
 <p>Shader Source Reading: The <code>ReadShader()</code> function reads the shader source code from a file and returns it as a string.</p>
 <p>Shader Module Creation: The <code>CreateShaderModule()</code> function takes SPIR-V code as input and creates a Vulkan shader module.</p>
 </div>
-<p>2. Pipeline Layout Setup:</p>
+<p>Pipeline Layout Setup:</p>
 <div class="inset">
 <p>The <code>CreatePipelineLayout()</code> function initializes the Vulkan <code>VkPipelineLayout</code> object using the descriptor set layouts from the uniforms. It handles errors if layout creation fails.</p>
 <p>While the descriptor set layouts are being put into a vector, the uniforms are also assigned binding indices.</p>
 </div>
-<p>3. Compute Pipeline Creation:</p>
+<p>Compute Pipeline Creation:</p>
 <div class="inset">
 <p><code>CreatePipeline()</code> function performs the following: <ul><li>Verifies that a pipeline layout exists.</li><li>Reads and compiles the compute shader source code into SPIR-V, which is then made into a shader module.</li><li>Sets up the shader stage information using Vulkan structures.</li><li>Creates the compute pipeline using Vulkan's <code>vkCreateComputePipelines</code>.</li></ul></p></div>
       </div>
