--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <!-- ~~~~~~~~~~~Video~~~~~~~~~~~ -->
+    <!-- ~~~~~~~~~~~KnightLight~~~~~~~~~~~ -->
     <div class = "videoContainer">
       <div class = "video">
         <video autoplay muted loop>
@@ -59,25 +59,24 @@
       <div class = "videoCover">
       </div>
 
-      <div class = "videoImage">
-        <button class="imageButton" onclick = "window.location.href = 'KnightLight.html'"> <img src="/media/KnightLightLogo.png" alt="KnightLight Game Logo" /> </button>
-      </div>
-
-      <div class = "videoText">
+      <div class = "videoContent">
+        <img src="/media/KnightLightLogo.png" alt="KnightLight Game Logo" />
+        
         <button class="button" onclick = "window.location.href = 'KnightLight.html'"> 2D Puzzle Platformer <br> Click Here to Learn More </button>
       </div>
     </div>
 
-    <script>
-      //Set video offset when page loads and on resize
-      setOffsetFromHeight('header', 'videoContainer');
-      window.addEventListener('resize', function() { setOffsetFromHeight('header', 'videoContainer'); });
-    </script>
-
-    <!-- ~~~~~~~~~~~Content~~~~~~~~~~~ -->
+    <!-- ~~~~~~~~~~~Nitelite~~~~~~~~~~~ -->
     <div class = "content">
 
     </div>
+    <!-- ~~~~~~~~~~~SproutTown~~~~~~~~~~~ -->
+
+    <!-- ~~~~~~~~~~~CombatCat~~~~~~~~~~~ -->
+
+    <!-- ~~~~~~~~~~~AnOpportunity~~~~~~~~~~~ -->
+
+    <!-- ~~~~~~~~~~~ProjectXenoflora~~~~~~~~~~~ -->
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
     <div class = "footerLoadingZone" id="/footer.html">
