Added Under construction page and linkedin about link

--- a/projects/knightLight/index.html
+++ b/projects/knightLight/index.html
@@ -1,5 +1,5 @@
 <!--__________________________________________________________________________________________________________-->
-<!--______________________________________________PROJECTS PAGE_______________________________________________-->
+<!--_____________________________________________KnightLight PAGE_____________________________________________-->
 <!--__________________________________________________________________________________________________________-->
 <!DOCTYPE html>
 <html> 
@@ -10,7 +10,7 @@
     <title>Evan Gray | Projects</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="projectsStyles.css">
+    <link rel="stylesheet" type="text/css" href="knightLightStyles.css">
     <link rel="stylesheet" type="text/css" href="/headerStyles.css">
     <link rel="stylesheet" type="text/css" href="/footerStyles.css">
     <link rel="stylesheet" type="text/css" href="/fonts.css">
@@ -35,12 +35,12 @@
 
   <body>
     <!-- ~~~~~~~~~~~Header~~~~~~~~~~~ -->
-    <div class = "header">
+    <div class = "header" style = "background-color: black;">
       <div class = "title">
         Evan Gray       
       </div>
       <div class = "buttons">
-        <button class= " button" onclick = "location.reload()">Projects</button>
+        <button class= " button" onclick = "window.location.href = '/'">Projects</button>
         <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
         <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = '/about/'">About</button>
@@ -49,37 +49,14 @@
     </div>
 
     <!-- ~~~~~~~~~~~KnightLight~~~~~~~~~~~ -->
-    <div class = "videoContainer">
-      <div class = "video">
-        <video autoplay muted loop>
-          <source src="/media/WebsiteKnightlightShowcase.mp4" type="video/mp4" />
-        </video>
-      </div>
-      
-      <div class = "videoCover">
-      </div>
-
-      <div class = "videoContent">
-        <img src="/media/KnightLightLogo.png" alt="KnightLight Game Logo" />
-        
-        <button class="button" onclick = "window.location.href = '/projects/knightLight/'"> 2D Puzzle Platformer <br> Click Here to Learn More </button>
-      </div>
-    </div>
-
-    <!-- ~~~~~~~~~~~Nitelite~~~~~~~~~~~ -->
-
-    <!-- ~~~~~~~~~~~SproutTown~~~~~~~~~~~ -->
     <div class = "content">
-
+      <img src="/media/CautionTape.png" alt="CautionTape">
+      <img src="/media/CautionTape.png" alt="CautionTape">
+      <div class="textoverlay"><p>UNDER&nbsp CONSTRUCTION</p></div>
     </div>
-    <!-- ~~~~~~~~~~~CombatCat~~~~~~~~~~~ -->
-
-    <!-- ~~~~~~~~~~~AnOpportunity~~~~~~~~~~~ -->
-
-    <!-- ~~~~~~~~~~~ProjectXenoflora~~~~~~~~~~~ -->
 
     <!-- ~~~~~~~~~~~Footer~~~~~~~~~~~~ -->
-    <div class = "footerLoadingZone" id="/footer.html">
+    <div class = "footerLoadingZone" id="/footer.html" style = "background-color: black;">
       <!--Footer will get autoloaded here :D -->
     </div>
   </body>
