--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,11 @@
 
     <div class = "aboutContainer">
       <div class = "aboutOther">
-        <img src="/media/EvanG.png" alt="KnightLight Game Logo" />
+        <img src="/media/EvanG.png" alt="My Face" />
+        <div class = "item">
+          <img src="/media/LinkedInLogo.png" alt="LinkedInLogo" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 3vw;"/>
+          <p>&ensp;<a href="https://www.linkedin.com/in/evanpatrickgray" style="text-decoration: none; color: inherit;">www.linkedin.com/in/evanpatrickgray</a>&emsp;</p>
+        </div>
         <div class = "item">
           <img src="/media/EmailIcon.png" alt="Email" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 3vw;"/>
           <p>&ensp;<a href="mailto:evanpgray.work@gmail.com" style="text-decoration: none; color: inherit;">evanpgray.work@gmail.com</a>&emsp;</p>
@@ -53,7 +57,6 @@
           <img src="/media/PhoneIcon.png" alt="Phone" style="width: calc(1.8vw + 0.4rem); border: none; margin-left: 2vw;"/>
           <p>&ensp;+1 (425) 213-7629</p>
         </div>
-
       </div>
       <div class = "aboutText">
 <p>I am currently pursuing a Bachelor of Science in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology.</p>
