--- a/projects/sprouttown/index.html
+++ b/projects/sprouttown/index.html
@@ -1,5 +1,5 @@
 <!--__________________________________________________________________________________________________________-->
-<!--_____________________________________________KnightLight PAGE_____________________________________________-->
+<!--______________________________________________SproutTown PAGE_____________________________________________-->
 <!--__________________________________________________________________________________________________________-->
 <!DOCTYPE html>
 <html> 
@@ -7,10 +7,10 @@
   <!-- ------------------------------------Head------------------------------------ -->
   <!-- ---------------------------------------------------------------------------- -->
   <head>
-    <title>Evan Gray | KnightLight</title>
+    <title>Evan Gray | Sprout Town</title>
 
     <!-- Link to the external stylesheets -->
-    <link rel="stylesheet" type="text/css" href="knightLightStyles.css">
+    <link rel="stylesheet" type="text/css" href="sproutTownStyles.css">
     <link rel="stylesheet" type="text/css" href="/headerStyles.css">
     <link rel="stylesheet" type="text/css" href="/footerStyles.css">
     <link rel="stylesheet" type="text/css" href="/fonts.css">
