Fixed scrolling bug

--- a/projects/anopportunity/index.html
+++ b/projects/anopportunity/index.html
@@ -44,7 +44,7 @@
         <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
         <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = '/about/'">About</button>
-        <button class= " button" onclick = "scrollToFooter()">Contact</button>
+        <button class= " button" onclick = "highlightInfo()">Contact</button>
       </div>
     </div>
 
