--- a/codesamples/opengl-computeshader/index.html
+++ b/codesamples/opengl-computeshader/index.html
@@ -87,14 +87,13 @@
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code provides an abstraction layer for OpenGL compute shaders. It allows the creation, management, and execution of compute shaders through a series of functions. This implementation manages resources like buffers, textures, and uniforms, and provides efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, and handle GPU memory and data binding efficiently.</p>
+<p>This code provides an abstraction layer for OpenGL compute shaders. Allowing the creation, management and execution of compute shaders. This implementation manages resources like buffers, textures and uniforms, providing efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, handle GPU memory and data binding efficiently.</p>
 
 
 <h2>Showcase Purpose:</h2>
-<p>This code demonstrates my experience in writing code utilizing the OpenGL API, in this case specifically it's compute shaders.</p>
-<p>This abstraction layer simplifies shader management, buffer handling, and uniform updates, streamlining the use of compute shaders in rendering pipelines. It reduces duplicate code and enhances overall code maintainability.</p>
-<p>The implementation highlights my ability to design efficient and developer-friendly solutions, with features like uniform caching, error handling, and memory management ensuring reliable performance. These optimizations minimize GPU communication overhead and improve runtime efficiency.</p>
-
+<p>This demonstrates my experience in writing code utilizing the OpenGL API, in this case specifically compute shaders.</p>
+<p>My ability to design efficient and developer-friendly solutions is highlighted in this code sample. Including uniform location/data cashing that minimizes GPU communication and error handling to catch issues early.</p>
+<p>This also shows my ability to abstract complicated systems, simplifing their usage and enhancing overall code maintainability.</p>
 
 <h2>Details:</h2>
 <p>Input Processing:</p>
@@ -122,8 +121,8 @@
 </div>
 <p>Error Handling and Debugging:</p>
 <div class="inset">
-<p>The code includes error handling, especially during shader compilation and linking. If errors occur, detailed messages are logged.</p>
-<p>When this code is run in Visual Studio's debug mode, the shader compilation and program linking processes are carefully checked, and failure logs are produced with specific error messages.</p>
+<p>The code includes error handling, especially during shader compilation and linking. If errors occur detailed messages are logged.</p>
+<p>When this code is run in Visual Studio's debug mode, the shader compilation and program linking processes are carefully checked and failure logs are produced with specific error messages.</p>
 </div>
        </div>
     </div>
