--- a/codesamples/vulkan-computepipeline/index.html
+++ b/codesamples/vulkan-computepipeline/index.html
@@ -87,11 +87,11 @@
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code provides a abstraction for managing compute pipelines with the Vulkan API. It integrates functionality for setting up compute shader modules, creating the pipeline/pipeline layouts, and binding the resources for use. Enabling easy interaction with Vulkan's low-level pipeline architecture for developers.</p>
+<p>This code provides an abstraction for managing compute pipelines with the Vulkan API. It integrates functionality for setting up compute shader modules, creating the pipeline/pipeline layouts and binding the resources for use. This enables easy interaction with Vulkan's low-level pipeline architecture for developers.</p>
 
 
 <h2>Showcase Purpose:</h2>
-<p>This code sample demonstrates my ability to work with the Vulkan API, focusing on compute pipelines and it's shaders. By creating an abstraction layer for Vulkan's compute pipeline, tasks like shader module creation, pipeline layout configuration, and pipeline creation are streamlined.</p>
+<p>The purpose of this sample is to demonstrate my ability to work with the Vulkan API, focusing on compute pipelines and its shaders. Shader module creation, pipeline layout configuration and pipeline creation are streamlined by creating an abstraction layer for the compute pipeline.</p>
 
 
 <h2>Details:</h2>
@@ -107,7 +107,7 @@
 </div>
 <p>Compute Pipeline Creation:</p>
 <div class="inset">
-<p><code>CreatePipeline()</code> function performs the following: <ul><li>Verifies that a pipeline layout exists.</li><li>Reads and compiles the compute shader source code into SPIR-V, which is then made into a shader module.</li><li>Sets up the shader stage information using Vulkan structures.</li><li>Creates the compute pipeline using Vulkan's <code>vkCreateComputePipelines</code>.</li></ul></p></div>
+<p><code>CreatePipeline()</code> function performs the following: <ul><li>Verifies that a pipeline layout exists</li><li>Reads and compiles the compute shader source code into SPIR-V, which is then made into a shader module</li><li>Sets up the shader stage information using Vulkan structures</li><li>Creates the compute pipeline using Vulkan's <code>vkCreateComputePipelines</code></li></ul></p></div>
       </div>
     </div>
 
