--- a/projects/index.html
+++ b/projects/index.html
@@ -89,7 +89,7 @@
         <img src="/media/SproutTownLogo.png" alt="Sprout Town Game Logo" />
         
         <div class = "buttonStuff" style = "width: calc(15vw + 2vh + 1.5rem); height: calc((15vw + 2vh + 1.5rem) * 0.4647519582);">
-          <button class="button" onclick = "window.location.href = '/projects/knightlight/'"> 
+          <button class="button" onclick = "window.location.href = '/projects/sprouttown/'"> 
             <img src="/media/SproutTownButton.png" alt="Sprout Town button"/>
             <div class = "buttonText" style="font-family: kalamBold; color: #703616; font-size: calc(1.7vw + 0.4vh + 0.3rem);">
               Learn More
