--- a/codesamples/opengl-computeshader/index.html
+++ b/codesamples/opengl-computeshader/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class = "codeDescription">
 <h2>Overview:</h2>
-<p>This code provides an abstraction layer for OpenGL compute shaders. Allowing the creation, management and execution of compute shaders. This implementation manages resources like buffers, textures and uniforms, providing efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, handle GPU memory and data binding efficiently.</p>
+<p>This code provides an abstraction layer for OpenGL compute shaders, allowing for their creation, management and execution. This implementation manages resources like buffers, textures and uniforms, providing efficient dispatching of compute shader workloads in a rendering pipeline. The core features include the ability to load shader code from files, compile and link shaders, dispatch compute tasks, handle GPU memory and data binding efficiently.</p>
 
 
 <h2>Showcase Purpose:</h2>
