--- a/projects/knightlight/index.html
+++ b/projects/knightlight/index.html
@@ -132,9 +132,9 @@
             one that seemed like a good fit. <br />
             <br />
             <img src = "/media/OldBrokenLighting.png" alt = "Old Broken lighting screenshot" class = "gameDescriptionImage"  style = "width: 40%; float: left; margin-right: 1vw;">  
-            As I was implementing this lighting system, it appeared to work well and even successfully lit some scenes. However, I soon encountered a critical 
+            As I implemented this lighting system, it appeared to work well and even successfully lit some scenes. However, I soon encountered a critical 
             limitation, the lighting system couldn’t illuminate walls as we needed. Due to the nature of this system, the lighting stopped at the wall instead of 
-            fading nicely into it, as shown in the picture on the left. Making so the player lacked crucial information for platforming. On top of that this 
+            fading nicely into it, as shown in the picture on the left. Making so the player lacked crucial information for platforming. On top of that, this 
             method struggled with complex or overlapping geometry, which led to unexpected results.<br />
             <br />
             I spent a fair amount of time attempting to modify the algorithm to achieve the necessary behavior. Despite my efforts, I realized that fixing the 
@@ -184,12 +184,12 @@
             lighting system, which became a hallmark feature of <span class = "italics">KnightLight</span>. In addition to that the lighting's initial failure was an amazing learning experience, 
             that made its final result all the more satisfying.  <br /> 
             <br /> 
-            However, there are always areas I would of have loved to improve if given more time: <br /> 
+            However, there are always areas I would have loved to improve if given more time: <br /> 
             <br /> 
           </p>
           <ul>
             <li>
-              <span class = "boldmini">Maintainability:</span> Near the end of the project the team began a “crunch” to finish our goals in time. While this “crunch” was successful, my code quality suffered. What was written in 
+              <span class = "boldmini">Maintainability:</span> Near the end of the project the team began a “crunch” to finish our goals in time. While this “crunch” was successful, my code quality suffered. What was written during 
                this time would be very hard to work off of if we ever continued the project. <br /> 
                <br /> 
             </li>
@@ -200,7 +200,7 @@
             </li>
           </ul>
           <p>
-            While there are many more, those are definitely  the ones that stick out to me.
+            While there are many more, those are the ones that stick out to me.
             <br />
            Overall, I’m excited to take on more challenging graphical systems and continue refining my skills! <br /> 
             <br /> 
