Fixed margin, make contact info shake if requested on screen

--- a/projects/knightlight/index.html
+++ b/projects/knightlight/index.html
@@ -120,7 +120,7 @@
           </p>
           <img src = "/media/Sprites.png" alt = "Sprite component screenshot" class = "gameDescriptionImage"  style = "width: 100%; margin-bottom: 3%;">   
           <p>
-            <img src = "/media/DebugDrawing.png" alt = "Debug drawing screenshot" class = "gameDescriptionImage"  style = "width: 40%; float: right; margin-right: 1vw;">   
+            <img src = "/media/DebugDrawing.png" alt = "Debug drawing screenshot" class = "gameDescriptionImage"  style = "width: 40%; float: right; margin-left: 1vw;">   
             <span class = "bold">Debugging Tools:</span> During this time I also created tools to visualize info and debug issues, such as bounding boxes and 
             light source icons, which streamlined development for the entire team. This was especially used by our physics programmer, who used these debugging 
             tools extensively to fix issues in the collision code. <br />
