Fixed projects button in knightlgiht page

--- a/projects/knightlight/index.html
+++ b/projects/knightlight/index.html
@@ -42,7 +42,7 @@
         Evan Gray       
       </div>
       <div class = "buttons">
-        <button class= " button" onclick = "location.reload()">Projects</button>
+        <button class= " button" onclick = "window.location.href = '/'">Projects</button>
         <button class= " button" onclick = "window.location.href = '/resume/'">Resume</button>
         <button class= " button" onclick = "window.location.href = '/codesamples/'">Code Samples</button>
         <button class= " button" onclick = "window.location.href = '/about/'">About</button>
